--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 
 </div> -->
 
-<div id="btn_omitir">
-    <a href="menu.html"><button onclick='javascript:ingresar();'>Omitir</button></a>
+<div id="btn_omitir" onclick='javascript:ingresar();'>
+    <a href="menu.html">Omitir</a>
 </div>
 
 
