--- a/menu.html
+++ b/menu.html
@@ -62,13 +62,18 @@
   <div id="header" style="height: 70px; margin-bottom: 30px;"><span>APPERT</span></div>
   <div class="track example-2">
     <div class="inner" style='background: url("images/appert_verde_ldpi.png")no-repeat fixed center;'>
-      <h2>Menú</h2>
+      <!-- <h2 style="position: absolute; bottom: 30px; color: black;">Menú</h2> -->
 
       <div class="view-port">
-		
-		<div class="boton_menu" id="menu_pert" style="background-color: #009e0f;"><span>Usar PERT</span></div>
-		<div class="boton_menu" id="menu_concepto" style="background-color: #6aa84f;  width: 35%;"><span style="vertical-align: -webkit-baseline-middle;">Conceptos</span></div>
-		<div class="boton_menu" id="menu_contacto" style="background-color: #b6d7a8;"><span style="vertical-align: -webkit-baseline-middle;">Contacto</span></div>
+        <!-- <div id="redes">
+          <a href="https://www.facebook.com/profile.php?id=100010653846772" target="_blank">Facebook</a><br>
+          <a href="https://twitter.com/App3rt_Colombia" target="_blank">Twitter</a>
+        </div> -->
+		<div id="botones" style="position: absolute;bottom: 10px;">
+  		<div class="boton_menu" id="menu_pert" style="background-color: #009e0f;"><span>Usar PERT</span></div>
+  		<div class="boton_menu" id="menu_concepto" style="background-color: #6aa84f;  width: 35%;"><span style="vertical-align: -webkit-baseline-middle;">Conceptos</span></div>
+  		<div class="boton_menu" id="menu_contacto" style="background-color: #b6d7a8;"><span style="vertical-align: -webkit-baseline-middle;">Contacto</span></div>
+    </div>
     
       </div>
 
@@ -88,8 +93,8 @@
           <div class="footer-main">
               <div class="col-md-6 footer-left">
                   <ul>
-                      <li><a href="#"><!-- Nosotros <span class="fb"> </span> --></a></li>
-                      <li><a href="#"><!-- <span class="twit"> </span> --></a></li>
+                      <li><a href="https://www.facebook.com/profile.php?id=100010653846772" target="_blank"><span class="fb"></span></a></li>
+                      <li><a href="https://twitter.com/App3rt_Colombia"><span class="twit" target="_blank"></span></a></li>
                       <li><a href="#"><!-- <span class="in"> </span> --></a></li>
                   </ul>
               </div>
