--- a/menu_pert.html
+++ b/menu_pert.html
@@ -47,6 +47,7 @@
         },
         defaultLayout: "web"
       });
+      localStorage['id_proyecto'] = null;
     });
   </script>
 </head>
@@ -90,9 +91,9 @@
           <div class="footer-main">
               <div class="col-md-6 footer-left">
                   <ul>
-                      <li><a href="#"><!-- Nosotros<span></span> --></a></li>
-                      <li><a href="#"><!-- <span> </span> --></a></li>
-                      <li><a href="#"><!-- <span> </span> --></a></li>
+                      <li><a href="https://www.facebook.com/profile.php?id=100010653846772" target="_blank"><span class="fb"></span></a></li>
+                      <li><a href="https://twitter.com/App3rt_Colombia"><span class="twit" target="_blank"></span></a></li>
+                      <li><a href="#"><!-- <span class="in"> </span> --></a></li>
                   </ul>
               </div>
               <div class="col-md-6 footer-right" style="position: relative; bottom: 40px;">
