--- a/conceptos.html
+++ b/conceptos.html
@@ -70,7 +70,7 @@
           </tr>
           <tr>
             <td>
-              <div class="div_create"><label for="n_gerente">La EDT &nbsp;&nbsp; 
+              <div class="div_create"><label for="n_gerente">EDT &nbsp;&nbsp; 
             </td>
             <td onclick="javascript:cargar_concepto('edt');">     
               <center><a href="javascript:void(0);">Ver</a></div></center>
@@ -110,7 +110,7 @@
           </tr>
           <tr>
             <td> 
-               <div class="div_create"><label for="obj">Ruta Critica   
+               <div class="div_create"><label for="obj">Ruta Cr&iacute;tica   
             </td>
             <td onclick="javascript:cargar_concepto('r_critica');">
               <center><a href="javascript:void(0);">Ver</a></div></center>
@@ -142,8 +142,8 @@
           <div class="footer-main">
               <div class="col-md-6 footer-left">
                   <ul>
-                      <li><a href="#"><!-- Nosotros<span class="fb"> </span> --></a></li>
-                      <li><a href="#"><!-- <span class="twit"> </span> --></a></li>
+                      <li><a href="https://www.facebook.com/profile.php?id=100010653846772" target="_blank"><span class="fb"></span></a></li>
+                      <li><a href="https://twitter.com/App3rt_Colombia"><span class="twit" target="_blank"></span></a></li>
                       <li><a href="#"><!-- <span class="in"> </span> --></a></li>
                   </ul>
               </div>
