--- a/pert_avanzado.html
+++ b/pert_avanzado.html
@@ -50,6 +50,15 @@
         defaultLayout: "web"
       });
     });
+
+    $(document).ready(function() {
+      
+      if(localStorage['id_proyecto'] != 'null')
+      {
+        cargar_detalle_proyecto(2, localStorage['id_proyecto']);
+      }
+
+    });
   </script>
 </head>
 <body>
@@ -118,9 +127,9 @@
           <div class="footer-main">
               <div class="col-md-6 footer-left">
                   <ul>
-                      <li><a href="#"><!-- Nosotros<span></span> --></a></li>
-                      <li><a href="#"><!-- <span> </span> --></a></li>
-                      <li><a href="#"><!-- <span> </span> --></a></li>
+                      <li><a href="https://www.facebook.com/profile.php?id=100010653846772" target="_blank"><span class="fb"></span></a></li>
+                      <li><a href="https://twitter.com/App3rt_Colombia"><span class="twit" target="_blank"></span></a></li>
+                      <li><a href="#"><!-- <span class="in"> </span> --></a></li>
                   </ul>
               </div>
               <div class="col-md-6 footer-right" style="position: relative; bottom: 40px;">
