Ajuste de estilos final

--- a/abrir_pert.html
+++ b/abrir_pert.html
@@ -72,7 +72,7 @@
       </div>
     	<div class="botones">
     		<!-- <div id="cargar">Crear</div> -->
-    		<div><a href="menu_pert.html">Regresar</a></div>
+    		<div style="margin-right: 40px !important;"><a href="menu_pert.html">Regresar</a></div>
     	</div>	
 
       <div class="bullet-pagination"></div>
