--- a/conceptos.html
+++ b/conceptos.html
@@ -120,7 +120,7 @@
       </center>
         <center>
         <div class="botones">
-          <div><a href="menu.html">Regresar</a></div>
+          <div style="margin-right: 40px !important;"><a href="menu.html">Regresar</a></div>
         </div>  
     </center>
       </div>
