--- a/contactenos.html
+++ b/contactenos.html
@@ -105,7 +105,7 @@
       </center>
       	<div class="botones">
       		<div  onclick="enviar_contacto();"><a href="javascript:void(0)">Enviar</a></div>
-      		<div><a href="menu.html">Regresar</a></div>
+      		<div style="margin-right: 40px !important;"><a href="menu.html">Regresar</a></div>
       	</div>	
     
       </div>
