--- a/menu.html
+++ b/menu.html
@@ -53,7 +53,7 @@
       console.log(history.length);
       history.go(1);
     }*/
-    if(window.history.forward(1) != null)   window.history.forward(1);
+    //if(window.history.forward(1) != null)   window.history.forward(-1);
   </script>
 
   
@@ -69,7 +69,7 @@
           <a href="https://www.facebook.com/profile.php?id=100010653846772" target="_blank">Facebook</a><br>
           <a href="https://twitter.com/App3rt_Colombia" target="_blank">Twitter</a>
         </div> -->
-		<div id="botones" style="position: absolute;bottom: 10px;">
+		<div id="botones" style="position: absolute;bottom: 0px;">
   		<div class="boton_menu" id="menu_pert" style="background-color: #009e0f;"><span>Usar PERT</span></div>
   		<div class="boton_menu" id="menu_concepto" style="background-color: #6aa84f;  width: 35%;"><span style="vertical-align: -webkit-baseline-middle;">Conceptos</span></div>
   		<div class="boton_menu" id="menu_contacto" style="background-color: #b6d7a8;"><span style="vertical-align: -webkit-baseline-middle;">Contacto</span></div>
