--- a/menu_pert.html
+++ b/menu_pert.html
@@ -48,6 +48,7 @@
         defaultLayout: "web"
       });
       localStorage['id_proyecto'] = null;
+      //if(window.history.forward(1) != null)   window.history.forward(-1);
     });
   </script>
 </head>
