--- a/pert.html
+++ b/pert.html
@@ -119,7 +119,7 @@
   </table>
       	<div class="botones">
       		<div id="cargar">Crear</div>
-      		<div><a href="menu_pert.html">Regresar</a></div>
+      		<div style="margin-right: 40px !important;"><a href="menu_pert.html">Regresar</a></div>
       	</div>	
     
       </div>
