--- a/pert_avanzado.html
+++ b/pert_avanzado.html
@@ -102,7 +102,7 @@
 
       	<div class="botones">
       		<div id="cargar_a">Crear</div>
-      		<div><a href="menu_pert.html">Regresar</a></div>
+      		<div style="margin-right: 40px !important;"><a href="menu_pert.html">Regresar</a></div>
       	</div>	
     
       </div>
